# Rusty-JVM

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/binary_reader/: Cargo.toml
crates/binary_reader/src/: lib.rs
crates/byte-reader/: Cargo.toml
crates/byte-reader/src/: lib.rs
crates/class-parser/: Cargo.toml
crates/class-parser/src/: attributes.rs  constant_pool.rs  lib.rs  util.rs
crates/jvm-parser/: Cargo.toml
crates/jvm-parser/src/: attributes.rs  classfile.rs  constant_pool.rs  jar.rs  lib.rs  utils.rs
crates/jvm-parser/src/classfile/: attributes.rs  classfile.rs  constant_pool.rs  mod.rs
crates/macros/src/: lib.rs
java/: MyProgram.java
java/com/ahse/jvm/: Main.java
java_mappings/java/io/: PrintStream.java
java_mappings/java/lang/: System.java
jvm/: Cargo.toml  build.rs
jvm-parser/: Cargo.toml
jvm-parser/src/: attributes.rs  content_pool.rs  lib.rs  utils.rs
jvm/src/: main.rs  utils.rs
jvm/src/class/: mod.rs
jvm/src/java_mappings/: mod.rs
jvm/src/java_mappings/java/io/: PrintStream.rs  mod.rs
jvm/src/java_mappings/java/lang/: StringBuilder.rs  System.rs  mod.rs
jvm/src/java_mappings/javax/: TestModule.rs  mod.rs
jvm/src/jvm/: mod.rs  opcodes.rs  traits.rs
macros/: Cargo.toml
macros/src/: lib.rs
