[package]
name = "jvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
jvm_parser = { path = "../crates/jvm-parser" }
macros = { path = "../crates/macros" }


[features]
debug = []