[package]
name = "jvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.0.18", features = ["derive"] }
jvm_parser = { path = "../crates/jvm-parser" }
binary_reader = { path = "../crates/binary_reader" }
class-parser = { path = "../crates/class-parser" }

[features]
debug = []