[package]
name = "jvm_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
byte_reader = { path="../byte-reader" }
flate2 = { version = "1.0.25", features = ["zlib"] }
rayon = { workspace = true }
